<resources>
    <string name="app_name">Dzienniczek Vulcan G16</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_no_internet">NoInternetActivity</string>
    <string name="title_activity_money">MoneyActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avg">0.00</string>
    <string name="money">+00.00 zł</string>
    <string name="j_polski">Język polski</string>
    <string name="j_angielski">Język angielski</string>
    <string name="j_niemiecki">Język niemiecki</string>
    <string name="muzyka">Muzyka</string>
    <string name="wiedza_o_spoleczenstwie">Wiedza o społeczeństwie</string>
    <string name="historia">Historia</string>
    <string name="geografia">Geografia</string>
    <string name="biologia">Biologia</string>
    <string name="chemia">Chemia</string>
    <string name="fizyka">Fizyka</string>
    <string name="matematyka">Matematyka</string>
    <string name="informatyka">Informatyka</string>
    <string name="edukacja_dla_bezpieczenstwa">Edukacja dla bezpieczeństwa</string>
    <string name="zajecia_techniczne">Zajęcia techniczne</string>
    <string name="wychowanie_fizyczne">Wychowanie fizyczne</string>
    <string name="etyka">Etyka</string>
    <string name="_0zl">0 zł</string>
    <string name="description_navigation_image">navigation_image</string>
    <string name="kieszonkowe">Kieszonkowe</string>
    <string name="z_premia_za">z premią za</string>
    <string name="podaj_login">Podaj login i hasło do dziennika elektronicznego firmy Vulcan</string>
    <string name="login">login</string>
    <string name="haslo">hasło</string>
    <string name="zaloguj">Zaloguj!</string>
    <string name="uwaga_aplikacja">UWAGA: Aplikacja działa tylko dla uczniów byłego Gimnazjum nr 16 w Lublinie!</string>
    <string name="desc_hello_image">hello image</string>
    <string name="desc_circle">circle</string>

    <string name="url_to_zastepstwa">http://zastepstwa.g16-lublin.eu/</string>
    <string name="wyloguj">Wyloguj</string>
    <string name="zl15">+15 zł</string>
    <string name="zl10">+10 zł</string>
    <string name="zl10m">-10 zł</string>
    <string name="zl0">0 zł</string>
    <string name="zl5m">-5 zł</string>
    <string name="semestr_1">Semestr 1</string>
    <string name="semestr_2">Semestr 2</string>
</resources>
