<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kieszonkowe"
                android:paddingBottom="8dp"
                android:paddingTop="16dp"
                android:paddingStart="32dp"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/money_extra_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/z_premia_za"
                android:paddingStart="32dp"
                android:textSize="13sp"
                android:paddingBottom="8dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/money_sum_current"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingEnd="32dp"
            android:gravity="center_vertical"
            android:textSize="24sp"
            android:text="@string/_0zl"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kieszonkowe"
                android:paddingBottom="8dp"
                android:paddingTop="16dp"
                android:paddingStart="32dp"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/money_extra_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/z_premia_za"
                android:paddingStart="32dp"
                android:textSize="13sp"
                android:paddingBottom="8dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/money_sum_previous"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingEnd="32dp"
            android:gravity="center_vertical"
            android:textSize="24sp"
            android:text="@string/_0zl"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorPrimary" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/j_polski"
                    style="@style/money_subject_name_style" />

                <TextView
                    android:id="@+id/money_jezyk_polski_avg"
                    style="@style/money_avg_style" />

                <TextView
                    android:id="@+id/money_jezyk_polski_money"
                    android:text="@string/_0zl"
                    style="@style/money_money_style" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView2"
                    android:text="@string/j_angielski"
                    style="@style/money_subject_name_style" />

                <TextView
                    android:id="@+id/money_jezyk_angielski_avg"
                    style="@style/money_avg_style" />

                <TextView
                    android:id="@+id/money_jezyk_angielski_money"
                    android:text="@string/_0zl"
                    style="@style/money_money_style" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/j_niemiecki"
                    style="@style/money_subject_name_style" />

                <TextView
                    android:id="@+id/money_jezyk_niemiecki_avg"
                    style="@style/money_avg_style" />

                <TextView
                    android:id="@+id/money_jezyk_niemiecki_money"
                    android:text="@string/_0zl"
                    style="@style/money_money_style" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/muzyka"
                    style="@style/money_subject_name_style" />

                <TextView
                    android:id="@+id/money_muzyka_avg"
                    style="@style/money_avg_style" />

                <TextView
                    android:id="@+id/money_muzyka_money"
                    android:text="@string/_0zl"
                    style="@style/money_money_style" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/historia"
                    style="@style/money_subject_name_style" />

                <TextView
                    android:id="@+id/money_historia_avg"
                    style="@style/money_avg_style" />

                <TextView
                    android:id="@+id/money_historia_money"
                    android:text="@string/_0zl"
                    style="@style/money_money_style" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/wiedza_o_spoleczenstwie"
                    style="@style/money_subject_name_style" />

                <TextView
                    android:id="@+id/money_wiedza_o_spoleczenstwie_avg"
                    style="@style/money_avg_style" />

                <TextView
                    android:id="@+id/money_wiedza_o_spoleczenstwie_money"
                    android:text="@string/_0zl"
                    style="@style/money_money_style" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/geografia"
                    style="@style/money_subject_name_style" />

                <TextView
                    android:id="@+id/money_geografia_avg"
                    style="@style/money_avg_style" />

                <TextView
                    android:id="@+id/money_geografia_money"
                    android:text="@string/_0zl"
                    style="@style/money_money_style" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/biologia"
                    style="@style/money_subject_name_style" />

                <TextView
                    android:id="@+id/money_biologia_avg"
                    style="@style/money_avg_style" />

                <TextView
                    android:id="@+id/money_biologia_money"
                    android:text="@string/_0zl"
                    style="@style/money_money_style" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/chemia"
                    style="@style/money_subject_name_style" />

                <TextView
                    android:id="@+id/money_chemia_avg"
                    style="@style/money_avg_style" />

                <TextView
                    android:id="@+id/money_chemia_money"
                    android:text="@string/_0zl"
                    style="@style/money_money_style" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/fizyka"
                    style="@style/money_subject_name_style" />

                <TextView
                    android:id="@+id/money_fizyka_avg"
                    style="@style/money_avg_style" />

                <TextView
                    android:id="@+id/money_fizyka_money"
                    android:text="@string/_0zl"
                    style="@style/money_money_style" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/matematyka"
                    style="@style/money_subject_name_style" />

                <TextView
                    android:id="@+id/money_matematyka_avg"
                    style="@style/money_avg_style" />

                <TextView
                    android:id="@+id/money_matematyka_money"
                    android:text="@string/_0zl"
                    style="@style/money_money_style" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/informatyka"
                    style="@style/money_subject_name_style" />

                <TextView
                    android:id="@+id/money_informatyka_avg"
                    style="@style/money_avg_style" />

                <TextView
                    android:id="@+id/money_informatyka_money"
                    android:text="@string/_0zl"
                    style="@style/money_money_style" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/edukacja_dla_bezpieczenstwa"
                    style="@style/money_subject_name_style" />

                <TextView
                    android:id="@+id/money_edukacja_dla_bezpieczenstwa_avg"
                    style="@style/money_avg_style" />

                <TextView
                    android:id="@+id/money_edukacja_dla_bezpieczenstwa_money"
                    android:text="@string/_0zl"
                    style="@style/money_money_style" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/zajecia_techniczne"
                    style="@style/money_subject_name_style" />

                <TextView
                    android:id="@+id/money_zajecia_techniczne_avg"
                    style="@style/money_avg_style" />

                <TextView
                    android:id="@+id/money_zajecia_techniczne_money"
                    android:text="@string/_0zl"
                    style="@style/money_money_style" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/wychowanie_do_zycia_w_rodzinie"
                    style="@style/money_subject_name_style" />

                <TextView
                    android:id="@+id/money_wychowanie_do_zycia_avg"
                    style="@style/money_avg_style" />

                <TextView
                    android:id="@+id/money_wychowanie_do_zycia_money"
                    android:text="@string/_0zl"
                    style="@style/money_money_style" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/etyka"
                    style="@style/money_subject_name_style" />

                <TextView
                    android:id="@+id/money_etyka_avg"
                    style="@style/money_avg_style" />

                <TextView
                    android:id="@+id/money_etyka_money"
                    android:text="@string/_0zl"
                    style="@style/money_money_style" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorPrimary" />

        </LinearLayout>


    </ScrollView>

</LinearLayout>



